Describe what you changed

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "react-toastify": "^10.0.4",
     "tailwind-merge": "^2.2.1",
     "zod": "^3.22.4",
-    "zustand": "^4.5.0"
+    "zustand": "^4.5.0",
+      "type": "module"
+
+    
   },
   "devDependencies": {
     "@types/qrcode": "^1.5.5"
