--- a/2fa_reactjs/package.json
+++ b/2fa_reactjs/package.json
@@ -41,9 +41,9 @@
     "postcss": "^8.4.33",
     "prisma": "^5.9.1",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8" 
-    
+    "typescript": "^5.8.2",
+    "vite": "^5.0.8"
   }
 }
